--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,16 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.loading {
+  cursor: wait;
+}
+
+#contact-number::-webkit-outer-spin-button,
+#contact-number::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 a {
   text-decoration: none;
   color: white;
@@ -33,6 +43,10 @@ a:hover {
 }
 
 #logo:hover {
+  cursor: pointer;
+}
+
+.logo:hover {
   cursor: pointer;
 }
 
@@ -78,8 +92,46 @@ a:hover {
   justify-content: space-evenly;
 }
 
-#navProfilePic {
-  margin-right: 60px;
+#navProfilePic{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-right: 100px;
+  position: relative;
+}
+
+#profileIcon {
+margin-right: 25px;
+border-radius: 40px;
+}
+
+#profileIcon:hover {
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 90%;
+  right: 0;
+  background-color: black;
+  color: white;
+  list-style: none;
+  padding: 10px 5px 5px 5px;
+  margin:  0 94px 0 0;
+}
+
+#dropdownContent a {
+  display: block;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+  font-size: medium;
+}
+
+#dropdownContent a:hover {
+  cursor: pointer;
+  color: #928f8f; /* Added background color on hover */
 }
 
 .breakSpace {
